initial commit with basic auth

--- a/UoM.Blazor/appsettings.json
+++ b/UoM.Blazor/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Data Source=THUNDERMONK\\SQLEXPRESS;Database=UoM;Integrated Security=True;Connect Timeout=60;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "AllowedHosts": "*"
 }
